k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app
  namespace: books-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books-app
  template:
    metadata:
      labels:
        app: books-app
    spec:
      containers:
        - name: books-app
          image: ivageorgieva/books:latest
          ports:
            - containerPort: 8080
