k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-app
  namespace: books-namespace
spec:
  selector:
    app: books-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
