k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-app-ingress
  namespace: books-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: booksapp.213051.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: books-app
                port:
                  number: 80
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: books-app
                port:
                  number: 80
